# Search-Tool

./: .gitignore  Alternative-Distribution-Methods.md  CERTIFICATE_UPGRADE.md  CHANGELOG-v0.21.0.md  DOCUMENTATION2.md  History.md  INSTALLATION_GUIDE.md  README.md  SearchTool.cer  build-and-zip.ps1  create-portable-zip.ps1  my-cert.pfx  nextissues.md  package-lock.json  package.json  setup.ps1  svelte.config.js  tsconfig.json  vite.config.js.timestamp-1748607225753-8aa2e75d0068d.mjs
Backend/: Cargo.toml  build.ps1  tauri.conf.json
Backend/capabilities/: default.json
Backend/src/: lib.rs  main.rs  memmap_line_reader.rs
Backend/wix/: main.wxs
Documentation/: DOCUMENTATION.md  MIGRATION.md  arch.md  nextissues.md
Frontend/: svelte.config.js  vite.config.ts
Frontend/routes/: +page.svelte
Frontend/src/: app.html
Frontend/src/components/: SearchForm.svelte  SearchResults.svelte  highlightText.ts
Frontend/src/routes/: +layout.svelte  +page.svelte
Frontend/src/stores/: searchState.ts
Frontend/src/types/: search.ts
Frontend/src/utils/: logger.ts  resultParser.ts
Scripts/: create-cert.ps1  download-rg.ps1  download-sdk.ps1
SearchTool-Portable/: README.txt
SearchTool-v0.21.0-Portable-Updated/: First-Run.bat  README.txt
src/: App.svelte
src-tauri/: Cargo.toml  about.txt  build.ps1  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/wix/: main.wxs
src/components/: SearchForm.svelte  SearchResults.svelte  highlightText.ts
src/lib/components/: SearchResults.svelte
src/routes/: +page.svelte
src/services/: searchService.ts
src/types/: search.ts
src/utils/: pathUtils.ts  resultParser.ts
