# ---------------------------
# Project metadata
# ---------------------------
[package]
name = "search-tool"           # Package name (used for builds and crates)
version = "0.1.0"              # Semantic version of your app
description = "A fast text search tool"    # Short project description
authors = ["you"]              # Author info (optional, used in crates.io)
edition = "2021"               # Rust edition being used (recommended: 2021)

# 📚 More info: https://doc.rust-lang.org/cargo/reference/manifest.html

# ---------------------------
# Library output configuration
# ---------------------------
[lib]
name = "search_tool_lib"         # Name of the compiled library
crate-type = ["staticlib", "cdylib", "rlib"]  
# Defines the formats to compile:
# - staticlib: for native linking
# - cdylib: for linking from C/FFI or Tauri
# - rlib: regular Rust library

# ---------------------------
# Build-time dependencies
# These are needed only during the build phase
# ---------------------------
[build-dependencies]
tauri-build = { version = "2.0", features = [] }  
# Generates metadata and config for building the Tauri app

# ---------------------------
# Runtime dependencies
# These are compiled into the final binary
# ---------------------------

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }  
# Serialization/deserialization framework + macros

serde_json = "1.0"  
# JSON support for serde (used to parse/generate JSON)

rfd = "0.15"
winreg = "0.55"
chrono = "0.4"
dirs = "5.0"
encoding_rs = "0.8"
memmap2 = "0.7"
once_cell = "1.19"

[features]
custom-protocol = ["tauri/custom-protocol"]


