# ---------------------------
# Project metadata
# ---------------------------
[package]
name = "search-tool"           # Package name (used for builds and crates)
version = "0.1.0"              # Semantic version of your app
description = "A fast text search tool"    # Short project description
authors = ["you"]              # Author info (optional, used in crates.io)
edition = "2021"               # Rust edition being used (recommended: 2021)

# 📚 More info: https://doc.rust-lang.org/cargo/reference/manifest.html

# ---------------------------
# Library output configuration
# ---------------------------
[lib]
name = "search_tool_lib"         # Name of the compiled library
crate-type = ["staticlib", "cdylib", "rlib"]  
# Defines the formats to compile:
# - staticlib: for native linking
# - cdylib: for linking from C/FFI or Tauri
# - rlib: regular Rust library

# ---------------------------
# Build-time dependencies
# These are needed only during the build phase
# ---------------------------
[build-dependencies]
tauri-build = { version = "1.5", features = [] }  
# Generates metadata and config for building the Tauri app

# ---------------------------
# Runtime dependencies
# These are compiled into the final binary
# ---------------------------

#[dependencies]
#tauri = { version = "2", features = [] }  
# Core Tauri framework for building native apps
#tauri-plugin-dialog = "2.0.0-beta"

[dependencies]
tauri = { version = "1.5", features = [ "shell-open", "shell-sidecar", "shell-execute", "dialog-all", "fs-all", "path-all"] }
rfd = "0.10"
serde = { version = "1.0", features = ["derive"] }  
# Serialization/deserialization framework + macros


serde_json = "1.0"  
# JSON support for serde (used to parse/generate JSON)

#tauri-plugin-dialog = "2.2.2"  
# Plugin for native file/folder dialog support (used in `open()`)

chrono = "0.4"
dirs = "5.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
